; ModuleID = '/home/carl/AnghaBench/libgit2/tests/online/extr_push.c_verify_refs.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/online/extr_push.c_verify_refs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i64)* @verify_refs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @verify_refs(i32* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @git_remote_ls(i32*** %7, i64* %8, i32* %9)
  %11 = load i32**, i32*** %7, align 8
  %12 = load i64, i64* %8, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = load i64, i64* %6, align 8
  %15 = call i32 @verify_remote_refs(i32** %11, i64 %12, i32* %13, i64 %14)
  ret void
}

declare dso_local i32 @git_remote_ls(i32***, i64*, i32*) #1

declare dso_local i32 @verify_remote_refs(i32**, i64, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
